@@ -17,9 +17,40 @@ public class TypeError extends AnalysisVisitor {
 
     @Override
     public void buildVisitor() {
+
+
         addVisit(Kind.METHOD_DECL, this::visitMethodDecl);
         addVisit(Kind.RETURN_STMT, this::visitReturnStmt);
         addVisit(Kind.BINARY_EXPR, this::visitBinaryExpr);
+
+        addVisit(Kind.IF_STMT, this::visitIfStmt);
+        addVisit(Kind.WHILE_STMT, this::visitWhileStmt);
+    }
+
+    private Void visitIfStmt(JmmNode jmmNode, SymbolTable symbolTable) {
+        var typeUtils = new TypeUtils(symbolTable);
+
+        var condition = typeUtils.getExprType(jmmNode.getChildren().getFirst());
+
+        if(!typeUtils.isAssignable(condition, TypeUtils.newType(TypeName.BOOLEAN, false))) {
+            var message = "Condition must be of type 'boolean', but found '" + condition.getName() + "'.";
+            addReport(Report.newError(Stage.SEMANTIC, jmmNode.getLine(), jmmNode.getColumn(), message, null));
+        }
+
+        return null;
+    }
+
+    private Void visitWhileStmt(JmmNode jmmNode, SymbolTable symbolTable) {
+        var typeUtils = new TypeUtils(symbolTable);
+
+        var condition = typeUtils.getExprType(jmmNode.getChildren().getFirst());
+
+        if(!typeUtils.isAssignable(condition, TypeUtils.newType(TypeName.BOOLEAN, false))) {
+            var message = "Condition must be of type 'boolean', but found '" + condition.getName() + "'.";
+            addReport(Report.newError(Stage.SEMANTIC, jmmNode.getLine(), jmmNode.getColumn(), message, null));
+        }
+
+        return null;
     }
 
 
@@ -37,8 +68,16 @@ public class TypeError extends AnalysisVisitor {
                 addReport(Report.newError(Stage.SEMANTIC, returnStmt.getLine(), returnStmt.getColumn(), message, null));
             }
         } else {
-            var returnType = new TypeUtils(table).getExprType(returnStmt.getChildren().get(0));
-            if (!methodReturnType.equals(returnType)) {
+            var returnExpr = returnStmt.getChildren().getFirst();
+            var typeUtils = new TypeUtils(table);
+            var returnType = typeUtils.getExprType(returnExpr);
+
+            // Special case for imported method calls
+            if (returnType.getName().equals("importedType") && Kind.FUNC_EXPR.check(returnExpr)) {
+                return null;
+            }
+
+            if (!typeUtils.isAssignable(methodReturnType, returnType)) {
                 var message = "Incompatible return type. Expected '" + methodReturnType.getName() + "' but found '" + returnType.getName() + "'.";
                 addReport(Report.newError(Stage.SEMANTIC, returnStmt.getLine(), returnStmt.getColumn(), message, null));
             }
